[gd_scene load_steps=9 format=2]

[ext_resource path="res://themes/Default.tres" type="Theme" id=1]
[ext_resource path="res://scripts/TileEditScreen.gd" type="Script" id=2]

[node name="TileEditScreen" type="Control"]

anchor_right = 1.0
anchor_bottom = 1.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
margin_left = 0.0
margin_top = 0.0
margin_right = -984.0
margin_bottom = -560.0
script = ExtResource( 2 )
mouse_filter = 0

[node name="TitleLabel" type="Label" parent="."]

anchor_right = 1.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 0
margin_left = 0.0
margin_top = 0.0
margin_right = 984.0
margin_bottom = 28.0
text = "Edit TileSet"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
mouse_filter = 1

[node name="TilesLabel" type="Label" parent="."]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 0
margin_left = 230.0
margin_top = 50.0
margin_right = 302.0
margin_bottom = 80.0
text = "Tiles:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
mouse_filter = 1

[node name="Tiles" type="ItemList" parent="."]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 230.0
margin_top = 80.0
margin_right = 750.0
margin_bottom = 490.0
mouse_filter = 0

[node name="TileShapeLabel" type="Label" parent="."]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 0
margin_left = 760.0
margin_top = 50.0
margin_right = 892.0
margin_bottom = 80.0
text = "Tile Shape:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
mouse_filter = 1

[node name="TileShape" type="OptionButton" parent="."]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 760.0
margin_top = 90.0
margin_right = 980.0
margin_bottom = 124.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "square"
flat = false
align = 0
selected = 0
items = [ "square", null, false, -1, null, "slope-L", null, false, -1, null, "slope-R", null, false, -1, null, "gentle-slope-1L", null, false, -1, null, "gentle-slope-2L", null, false, -1, null, "gentle-slope-1R", null, false, -1, null, "gentle-slope-2R", null, false, -1, null ]
mouse_filter = 0

[node name="BackButton" type="Button" parent="."]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 420.0
margin_top = 490.0
margin_right = 492.0
margin_bottom = 524.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "<Back"
flat = false
mouse_filter = 0

[node name="SaveButton" type="Button" parent="."]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 500.0
margin_top = 490.0
margin_right = 560.0
margin_bottom = 524.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Save"
flat = false
mouse_filter = 0

[node name="FileDialog" type="FileDialog" parent="."]

visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = 40.0
margin_top = 60.0
margin_right = 980.0
margin_bottom = 560.0
popup_exclusive = false
window_title = "Save a File"
dialog_hide_on_ok = false
mode = 4
access = 2
filters = PoolStringArray( "*.tres;TileSet Resource" )
show_hidden_files = false
mouse_filter = 0

[connection signal="item_selected" from="Tiles" to="." method="_on_Tiles_item_selected" binds=[  ]]

[connection signal="item_selected" from="TileShape" to="." method="_on_TileShape_item_selected" binds=[  ]]

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed" binds=[  ]]

[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed" binds=[  ]]

[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected" binds=[  ]]
